Changes in quota-tools from 3.06 to 3.07
* rised maximal number of mountpoint to 256 (Jan Kara)
* small fix in configure (Nathan Scott)

Changes in quota-tools from 3.05 to 3.06
* fixed caching of libwrap configure result (Jan Kara)
* fixed copying of quotafile name from mtab (?)
* warnquota.conf is now installed in config dir (Jan Kara)
* updated format detection to reflect changes in kernel interface in 2.5.18 (Jan Kara)
* fixed scanning of non-mountpoint directories (Jan Kara)
* fixed detection of XFS format (Jan Kara)
* fixed printing of 'over softlimit sign' in quota(1) (Jan Kara)

Changes in quota-tools from 3.04 to 3.05
* quota tools should honour 'noquota' mount option (Jan Kara)
* fixes in manpages (Arkadiusz Miskiewicz)
* fixed detection of libwrap in configure (Arkadiusz Miskiewicz)
* added forgotten ROOTDIR to path to gettext catalogs (Arkadiusz Miskiewicz)
* quotacheck uses newest format supported by kernel when creating new quota files (Jan Kara)
* fixed bug in IO initialization when -F xfs was given (Jan Kara)
* added support for quota 6.5.1 (Jan Kara)
* quotaon(8) now can get format parameter (Jan Kara)
* fixed bad return value of quota(1) (Jan Kara)
* fixed bug in quota format format detection (Jan Kara)

Changes in quota-tools from 3.03 to 3.04
* added -D_FILE_OFFSET_BITS=64 to Makefile - fixes problems with large files with some libcs (Michael Meskes)
* added -p (print state) to quotaon (Vladimir Linek, Jan Kara)
* made quotaon(8) write better error messages (Jan Kara)
* make install now creates man directories (Jan Kara)
* added -q <quotatab> and -c <configfile> options to warnquota(8) (Jan Kara)
* added some notes about quotatab to warnquota manpage (Jan Kara) 
* fixed bug in options parsing of warnquota(8) (Michael Meskes)
* ignore automount mountpoints (Philippe Troin)
* fixed minor bug in printing grace times (Jan Kara)
* fixed quotaon(8) behaviour when it sees newer kernel then it's able to handle (Jan Kara)